# lm

./: .gitignore  build_firefox_extenion.sh  index.html  package.json  vite.config.js
backend/: db.sqlite3  pyproject.toml
backend/apps/candidacy/: admin.py  apps.py  forms.py  urls.py  views.py
backend/apps/candidacy/migrations/: 0001_initial.py  0002_candidacy.py
backend/apps/candidacy/models/: __init__.py  candidacy.py  civility.py  contract.py  position.py  status.py  technology.py  technology_category.py
backend/apps/candidacy/templates/candidacy/: home.html
backend/apps/core/: context_processors.py  models.py
backend/apps/core/management/commands/: insert_init.py
backend/apps/core/static/css/: main.css
backend/apps/core/static/js/: main.js
backend/apps/core/templates/: default.html
backend/config/: settings.py  urls.py
firefox_extension/: background.js  content.js  manifest.json
firefox_extension/popup/: popup.html
frontend/: pnpm-lock.yaml  vite.config.js
frontend/src/: main.js  utils.js
src/: main.js  style.css
