[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "niux3",email = "renaudbourdeau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-extensions (>=4.1,<5.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
